# fast-small-crypto

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  benchmark_md4.cpp  benchmark_md5.cpp  benchmark_sha1.cpp  benchmark_sha512.cpp  cpuid.cpp  fsc.cpp  md4.c  md4.cpp  md4.h  md4_avx.cpp  md5.cpp  md5.h  md5_avx2.cpp  reference_implementation.c  reference_implementation.cpp  sha1.h  sha1_x86_shani.cpp  sha256_avx512.cpp  sha512.h  sha512_internal.h  simd.hpp  tests.cpp  tests_md4.cpp  tests_sha1.cpp  tests_sha256.cpp  tests_sha512.cpp
.github/workflows/: benchmark.yml  cmake-multi-platform.yml  multi-platform-testing.yml
benchmark/: aes.cpp  md4.cpp  sha1.cpp  sha256.cpp
src/: aes.cpp  aes.h  byteswap.h  md4.cpp  md4.h  md4_avx.cpp  md4_avx2.cpp  md4_avx512.cpp  md5_avx.cpp  md5_avx512.cpp  sha1.cpp  sha1.h  sha1_avx.cpp  sha1_avx2.cpp  sha1_avx512.cpp  sha1_x86_shani.cpp  sha256.cpp  sha256.h  sha256_avx.cpp  sha256_avx2.cpp  sha256_internal.h  sha512.cpp  sha512_avx.cpp  sha512_avx2.cpp  sha512_avx512.cpp  simd.hpp  x86_aesni.cpp  x86_shani.cpp
tests/: aes.cpp  aesmct_intermediate.7z  general.cpp  md4.cpp  md5.cpp  reference_implementation.cpp  sha1.cpp  sha256.cpp  sha512.cpp
